Fix: Correção no estilo da collapse de listagem de movimentos

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,10 +22,6 @@ body {
     text-transform: uppercase;
 }
 
-input, select, textarea, span{
-    /* color: #FFFFFF; */
-}
-
 .mar-bottom-50 {
     margin-bottom: 50px !important;
 }
@@ -83,23 +79,15 @@ input[type=text]:not(.browser-default):disabled {
     border-bottom: 1px dotted #9e9e9e !important;
 }
 
-input[type=text]:not(.browser-default):disabled+label {
-    /* color: #9e9e9e !important; */
-}
-
 .collapsible {
     background-color: #2c3032;
     border: 0px;
 }
 
 .collapsible-header {
-    color: #FFFFFF;
-    background-color: #2c3032;
-    border-bottom: 1px solid #222628;
+    border-bottom: 1px solid #00000021;
 }
 
 .collapsible-body {
-    color: #FFFFFF;
-    background-color: #222628;
-    border-bottom: 1px solid #2c3032;
+    border-bottom: 1px solid #00000021;
 }
